--- a/Libro.tex
+++ b/Libro.tex
@@ -255,8 +255,14 @@ idrocefalia.\endnote{\raggedright\url{https://www.stateofmind.it/2016/01/il-picc
 \end{mdframed}
 
 \subsection{Metodo Scientifico}
-Abbiamo visto solo alcuni dei modi in cui la mente potrebbe distorcere la realtà, quindi come possiamo tentare di contenere questo errore?
-Esiste un metodo, che seppur non sia perfetto, è il migliore che abbiamo trovato fin'ora. Il metodo scientifico non stabilisce verità assolute, ma produce modelli sempre più precisi della realtà. Di seguito vorrei trasmettere del perchè è così affidabile e migliore rispetto ad altri metodi, che non avendo gli stessi controlli, non consentono una simile robustezza.
+Abbiamo visto solo alcuni dei modi in cui la mente potrebbe distorcere la realtà.
+Anche i fenomeni più semplici, possono rivelarsi complessi o contro-intuitivi. Spesso la realtà smentisce ciò che la logica suggerisce, ad esempio, l'intuizione ci porterebbe a direbbe che è il Sole a muoversi attorno alla Terra, e senza specifiche nozioni astronomiche sarebbe difficile dimostrare il contrario.
+Di fronte a teorie opposte, come decidiamo di chi fidarci in mancanza di competenze specifiche? Da un lato abbiamo singoli individui che procedono per intuito e logica e, spesso isolati; dall'altro, una comunità che opera attraverso un metodo rigoroso e la replicazione degli esperimenti.
+Qualcuno potrebbe sostenere che anche chi sostiene alcune teorie del coplotto sia rigoroso nei suoi studi e, che utilizzi un metodo e, non metto in dubbio la buona fede nella ricerca della verità di queste persone. Seppur questo sia un metodo, non è scientifico, perchè non segue tutto l'iter di esperimenti, revisioni, pubblicazione su riviste ecc…
+Se metodi diversi portano a conclusioni diverse, il dibattito non dovrebbe riguardare le singole teorie, ma il motivo per cui il metodo scientifico, pur non essendo infallibile, resti lo strumento più affidabile mai sviluppato. 
+Per invalidare una teoria, bisogna raccogliere documentazioni, prove, analisi e verificare le fonti. Per questo, a mio avviso, più che delle conclusioni, risulta profiquo parlare di come si è arrivati a quest'ultime; il metodo. Se concordiamo su questo, le conclusioni comuni ne saranno la naturale conseguenza.
+
+Di seguito vorrei trasmettere del perchè il metodo scientifico risulti così affidabile e preferibile rispetto ad altri metodi, che non avendo gli stessi controlli, non consentono una simile robustezza.
 
 \begin{itemize}
 \item Ripetibilità: Se un esperimento può essere ripetuto con gli stessi risultati, questo rafforza la fiducia delle conclusioni.
@@ -297,14 +303,6 @@ Quando si naviga sul web, numeri e grafici, seppur corretti potrebbero non esser
 
 Questi tre grafici che ritroviamo sul libro mostrano i risultati di test di matematica divisi tra uomini e donne. Se guardiamo il primo grafico, dove sono mostrate le medie dei test di matematica nei vari anni, vediamo che le donne conseguono un punteggio decisamente inferiore rispetto agli uomini. Osservando il secondo grafico, i dati sono gli stessi, ma cambiando la scala dell’asse Y da 450–540 a 0–600, la differenza tra i punteggi di uomini e donne appare visivamente molto più ridotta. Questi due grafici mostrano i risultati medi di ogni anno, mentre nel terzo vediamo tutti i risultati, senza medie, di un solo anno, il 2016. Notiamo come i dati sono quasi sovrapponibili, non mostrando significative differenze tra uomini e donne, suggerendo che quando siamo davanti a delle medie, potremmo cercare le distribuzioni.
 
-
-
-
-
-
-
-
-
 \begin{mdframed}[linewidth=1pt]
 Giornali e cronaca
 
@@ -313,77 +311,22 @@ Per la salute di un paese sono utili le statistiche più che i singoli episodi d
 L’aspetto più subdolo e involontariamente crudele della cronaca, è che rischia di indurre le persone, che vivono in un Paese sicuro, a condurre un’esistenza dominata dalla paura.
 \end{mdframed}
 
-
-
-
-
-
-
 \begin{mdframed}[linewidth=1pt]
-Fake news e complotti
+Complotti, paranormale e alieni
 
-Anche le cose più semplici, andando a un livello di dettaglio maggiore, sono molto complicate da spiegare o
-contro-intuitive, ovvero fenomeni che la logica, anche ragionevole, spiegherebbe in un modo, ma la realtà dimostra essere sbagliato. Ad esempio risulta intuitivo dire che è il sole che si muove attorno alla terra, ma sappiamo non essere così. 
-Senza conoscenze di base in astronomia e fisica, può risultare difficile smentire certe teorie complottiste.
-Quindi come posso scegliere qual è la versione giusta? 
-Devo credere a qualcuno che lo sa verificare con i telescopi, o credere a qualcuno che è andato sullo
-spazio o, credere a qualcuno che scrive un post sui social? In qualunque caso mi dovrò fidare di qualcuno. Per questo,
-credere per credere, conviene farlo per qualcosa dove non è un singolo a dire qualcosa, ma un gruppo di esperti che
-ottengono gli stessi risultati da un esperimento (peer review). Non possiamo solo affidarci alle nostre sensazioni o ai
-nostri sensi. Solo con lo sguardo sarebbe difficile dire che siamo noi a girare attorno al sole. Le fake news e le teorie del complotto offrono risposte semplici e immediate a problemi complessi, spesso evitando il percorso più faticoso, ma necessario di acquisire basi di pensiero critico e alfabetizzazione scientifica. Inoltre bisogna raccogliere
-documentazioni, testimonianze, analisi, per demolire una teoria del complotto, o verificare le fonti. 
-Mentre per creare una fake news basta un intuizione o un po' di fantasia.
+È giusto sottolineare che complotto non significa necessariamente falso. 
+Non possiamo dire cosa sia vero e cosa no, ma cosa abbia seguito un processo di analisi scientifico. 
+Se non è scienza è qualcos'altro, come pseudoscienza, che magari è pure vero e, forse, un giorno si riuscirà a dimostrarlo.
 
-\needspace{4cm}
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.95\linewidth]{images/Libro-img013.png}
-  \caption{Credits: ResearchGate \raggedright\url{https://www.researchgate.net/figure/interaction-of-polarized-users-with-deliberately-false-information-Trolls-posts-We\_fig6\_33193629}}
-\end{figure}
-
-L'analisi riassunta da quest'immagine rappresenta che i post deliberatamente
-falsi, fatti per divertimento da troll o semplicemente per ricevere più click e, di conseguenza più guadagni, ricevono
-più like e commenti dai complottisti che, paradossalmente, nella ricerca della verità, possono rimanere aggrovigliati in questa
-rete di notizie false.
-
-È giusto sottolineare che complotto non significa necessariamente falso. Non possiamo dire cosa sia vero e cosa no in ogni contesto, ma
-cosa abbia seguito un processo di analisi scientifico. Se non è scienza è
-qualcos'altro, come pseudoscienza, che magari è pure vero e, se così fosse, un giorno forse si riuscirà a dimostrarlo. 
-La questione riguarda solo il metodo che vogliamo adottare per indagare la realtà, alla luce di quanto la
-nostra mente possa produrre distorsioni e, fin ora, il metodo più solido che l'umanità abbia
-prodotto è proprio quello scientifico, per le ragioni viste precedentemente.
-
-Quindi una domanda potrebbe essere: perché i complottisti non pubblicano su riviste scientifiche? Se hanno così a cuore
-la divulgazione delle proprie scoperte? Come abbiamo visto prima, per via dell'anonimato sulle
-revisioni, la scusa della censura da parte dei poteri forti può risultare così, per alcuni, una spiegazione debole. 
-
-
-David Grimes ha proposto un metodo statistico per studiare i
-complotti\endnote{\raggedright\url{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0147905}}. Grimes fonda la sua
-teoria su una semplice idea: meno persone sono a conoscenza del complotto, più tempo rimarrà segreto.
-Analizzando i dati del passato relativi ai complotti che sono stati scoperti, è riuscito a creare un modello matematico
-in grado di stimare per quanto tempo un informazione può rimanere segreta in relazione al numero di persone coinvolte,
-quindi calcolare la probabilità che ci sia una talpa o la possibilità di fughe di notizie.
-Un complotto può restare segreto per 5 anni se ci sono meno di 2521 persone a conoscenza e, 100 anni se i cospiratori
-sono meno di 125.
+David Grimes ha proposto un metodo statistico per studiare i complotti\endnote{\raggedright\url{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0147905}} osservando che meno persone sono a conoscenza del complotto, più tempo rimarrà segreto.
+Analizzando i dati del passato relativi ai complotti che sono stati scoperti, è riuscito a creare un modello matematico.
+Un complotto può restare segreto per 5 anni se ci sono meno di 2521 persone a conoscenza e, 100 anni se i cospiratori sono meno di 125.
 Questa scoperta rende improbabili molte teorie del complotto tra cui il mancato sbarco sulla Luna, cospirazione sui vaccini e l'esistenza di una cura segreta per il cancro.
-Anche grandi aziende farmaceutiche (Bad Pharma di Ben
-Goldacre\endnote{\raggedright\url{https://www.amazon.co.uk/dp/0007350740}}) o
-l'NSA (National Security Agency) non sono riuscite ad eludere questa regola, famoso il caso di Edward
-Snowden che denunciò lo stato americano di spiare i cittadini tramite siti come wikileaks.org o arxiv.org dove
-possibile pubblicare fughe di notizie.
+Anche grandi aziende farmaceutiche (Bad Pharma di Ben Goldacre\endnote{\raggedright\url{https://www.amazon.co.uk/dp/0007350740}}) o l'NSA (Caso Snowden) non sono riuscite ad eludere questa regola grazie a siti come wikileaks.org o arxiv.org.
 
-Riguardo al paranormale, James Randi nel 1996 fondò la James Randi Educational Foundation\endnote{\raggedright\url{https://web.randi.org}} che studia le
-affermazioni riguardanti questi fenomeni. La fondazione mette in palio un premio di un milione di dollari per chiunque
-possa dimostrare una capacità paranormale in un ambiente controllato (quindi i video non sono ammessi visto la possibilità di essere manipolati). 
-Nessuno però è mai riuscito a superare il test preliminare, che viene
-stabilito e concordato tra Randi e il candidato. Ad oggi nessuno è ancora riuscito a dimostrare un fenomeno paranormale.
-Anche il CICAP opera nello stesso campo e ha stilato una serie di
-requisiti\endnote{\raggedright\url{https://www.cicap.org/n/articolo.php?id=273076} } alla ricerca di verificare fenomeni paranormali.
-\end{mdframed}
-
-\begin{mdframed}[linewidth=1pt]
-Paradosso di Fermi
+La James Randi Educational Foundation\endnote{\raggedright\url{https://web.randi.org}} ha messo in palio un premio di un milione di dollari per chiunque
+possa dimostrare una capacità paranormale in un ambiente controllato (i video non sono ammessi per la possibilità di manipolazioni). 
+Nessuno però è ancora riuscito a superare il test preliminare, che viene concordato tra la fondazione e il candidato.
 
 Il paradosso di Fermi nasce da questa domanda: se l’universo è così vasto, perché non abbiamo prove dell’esistenza di altre civiltà evolute? L’equazione di Drake cerca di stimare quante forme di vita intelligente potrebbero esistere, ma molti dei suoi parametri sono sconosciuti. Uno studio dell’Università di Oxford\endnote{\raggedright\url{https://arxiv.org/pdf/1806.02404.pdf}}, ha osservato, provando diversi valori, tratti da distribuzioni realistiche per i parametri sconosciuti della Drake, che esiste una probabilità non trascurabile di trovaci da soli nell’universo osservabile.
 
@@ -395,66 +338,51 @@ Esistono video ufficiali diffusi dall’aeronautica statunitense che mostrano og
 \end{mdframed}
 
 \begin{mdframed}[linewidth=1pt]
-Ricerca scientifica non equivale a verità
+Altri esempi di dati decontestualizzati
 
 Sul web e più in generale nel dibattito pubblico sembra essere nata, in alcune bolle, una battaglia tra i sessi. Quelli che dicono che indubbiamente e in ogni circostanza sono più svantaggiati i maschi e chi le femmine, portando dati a favore della propria posizione.
 È importante riconoscere che entrambi i sessi affrontano difficoltà significative, ma spesso diverse per natura, visibilità e contesto. L'obiettivo non è sminuire il dolore di nessuno, ma evidenziare come una lettura semplicistica dei dati possa rafforzare polarizzazioni invece di contribuire alla comprensione.
-Quello che vorrei fare, più che parlare di questi temi, è usarli come pretesto per mostrare come anche informazioni vere possano essere interpretate e non coincidano necessariamente sempre con una rigida verità. Gli esempi che porterò di seguito sono veri e contemporaneamente contrastanti tra loro. 
-Se partiamo dalla fisica che studia i fenomeni del mondo possiamo fondare la chimica che si specializza sulla materia, su cui può sorgere la biologia crea medicinali oltre a studiare gli organismi, per arrivare alla medicina che grazie ai farmaci e non solo può curare gli esseri umani, che necessitano anche di aiuti mentali, grazie alla psicologia i cui effetti dipendono dall'ambiente che la sociologia cerca di conoscere. Più ci allontaniamo dalla fisica e più ci avviniamo all'essere umano prima nelle sue parti biologiche e poi nelle sue parti più astratte mentali fino ad arrivare ai gruppi di persone. Man mano che ci avviciniamo alla sociologia o ancora di più all'antropologia le variabili aumentano esponenzialmente e diventa sempre più difficile trovare una correlazione certa tra causa ed effetto, non potendo avere la sicurezza di aver compreso tutte le variabili. 
-In questi esempi si mostrano le argomentazioni a vantaggio di uomini e donne seguite dalle variabili trascurate che rimettono in prospettiva questi argomenti.
+Quello che vorrei fare, più che parlare di questo tema, è usarlo come pretesto per mostrare come, anche informazioni vere possano essere interpretate e non coincidere con una rigida verità. Gli esempi che porterò di seguito sono veri e contemporaneamente contrastanti tra loro. 
 
-Gli esempi che seguono non vogliono suggerire che i problemi degli uomini siano "più gravi" di quelli delle donne, o viceversa. Ogni dato va interpretato con attenzione, consapevoli del fatto che i vissuti individuali non si esauriscono nei numeri. Questo confronto osserva quanto sia difficile isolare la "verità" nei fenomeni complessi, soprattutto quando toccano identità, cultura e relazioni.
+Se partiamo dalla fisica che studia i fenomeni del mondo possiamo fondare la chimica che si specializza sulla materia, su cui può sorgere la biologia crea medicinali oltre a studiare gli organismi, per arrivare alla medicina che grazie ai farmaci e non solo può curare gli esseri umani, che necessitano anche di aiuti mentali, grazie alla psicologia i cui effetti dipendono dall'ambiente che la sociologia cerca di conoscere. Più ci allontaniamo dalla fisica e più ci avviciniamo all'essere umano prima nelle sue parti biologiche e poi nelle sue parti più astratte mentali fino ad arrivare ai gruppi di persone. Man mano che ci avviciniamo alla sociologia o ancora di più all'antropologia le variabili aumentano esponenzialmente e diventa sempre più difficile trovare una correlazione certa tra causa ed effetto, non potendo avere la sicurezza di aver compreso tutte le variabili. 
+In questi esempi si mostrano le argomentazioni a vantaggio di uomini e donne seguite dalle variabili trascurate che rimettono in prospettiva questi argomenti.
 
 \begin{itemize}
 \item Argomentazione maschile: Nel 2021 sul posto di lavoro sono morti 1.366 uomini contro 72 casi per le donne\endnote{\raggedright\url{https://www.inail.it/cs/internet/docs/alg-dati-inail-2021-giugno-luglio-pdf.pdf}} \endnote{\raggedright\url{https://nova.ilsole24ore.com/infodata/infortuni-sul-lavoro-1-200-morti-nel-2018-i-dati-settore-per-settore/}}.
-Variabili trascurate: Statisticamente, gli uomini, grazie alla loro conformazione fisica possono fare lavori più fisicamente logoranti e pericolosi. 
+\\Variabili trascurate: Statisticamente, gli uomini, grazie alla loro conformazione fisica possono fare lavori più fisicamente logoranti e pericolosi. 
 \item Argomentazione maschile: I senzatetto maschi sono l'84\% e femmine 16\% le femmine\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Senzatetto}}.
-Variabili trascurate: gli uomini spesso finiscono per strada per dipendenze o problemi psichiatrici, che a loro volta possono dipendere dalla società e pressioni sugli uomini. Le donne più frequentemente per violenza domestica. Le donne possono sfuggire dalla condizione di senzatetto perché più facilmente trovano chi li ospita, altre finiscono nella prostituzione volontaria o meno, siccome per strada saranno più vulnerabili e non finiranno così in queste statistiche.
-\item Argomentazione femminile: La violenza domestica è un fenomeno tragico che colpisce in modo grave migliaia di donne, uomini e bambini. Secondo Amnesty International una donna su tre ha subito violenza\endnote{\raggedright\url{https://www.amnesty.ch/it/news/2007/8-marzo-giornata-mondiale-della-donna}}. 
-Variabili trascurate: Nella metà dei casi di coppia, la violenza è reciproca, mentre nell'altra metà il 70\% degli episodi di violenza è commessa dalle donne\endnote{\raggedright\url{https://ajph.aphapublications.org/doi/pdfplus/10.2105/AJPH.2005.079020}}. 
-Variabili trascurate: Questo non significa negare la gravità della violenza contro le donne, né ignorare che le conseguenze fisiche e sociali siano spesso più pesanti per loro. Non tutte le violenze infatti sono infatti uguali, bisognerebbe distinguere tre le varie forme di violenza, verbale, fisica grave, minacce, clima di paura, controllo economico e, altre forme di conflitto. 
-Variabili trascurate: conseguenze mediche. La violenza femminile, pur esistente, ha generalmente conseguenze meno gravi in termini di danni fisici, ricoveri o morti. 
-Variabili trascurate: La vergogna sociale potrebbe portare gli uomini a denunciare meno l'aggressione della partner e così via all'infinito o quasi. Va aggiunto anche il timore sociale che spesso impedisce alle donne di lasciare una relazione violenta.
+\\Variabili trascurate: gli uomini spesso finiscono per strada per dipendenze o problemi psichiatrici, che a loro volta possono dipendere e da pressioni sociali. Le donne più frequentemente per violenza domestica. Le donne possono sfuggire dalla condizione di senzatetto perché più facilmente trovano chi li ospita, altre però finiscono nella prostituzione volontaria o meno, siccome per strada saranno più vulnerabili sfuggendo da queste statistiche.
+\item Argomentazione femminile: Una donna su tre ha subito violenza domestica\endnote{\raggedright\url{https://www.amnesty.ch/it/news/2007/8-marzo-giornata-mondiale-della-donna}}. 
+\\Variabili trascurate: Nella metà dei casi di coppia, la violenza è reciproca, mentre nell'altra metà il 70\% degli episodi di violenza è commessa dalle donne\endnote{\raggedright\url{https://ajph.aphapublications.org/doi/pdfplus/10.2105/AJPH.2005.079020}}. 
+\\Variabili trascurate: Questo non significa negare la gravità della violenza contro le donne e, che le conseguenze fisiche e sociali siano spesso più pesanti per loro. Non tutte le violenze sono uguali: verbale, fisica, minacce, controllo economico e, altre forme di conflitto. 
+\\Variabili trascurate: conseguenze mediche. La violenza femminile, ha generalmente conseguenze meno gravi in termini di danni fisici, ricoveri o morti. 
+\\Variabili trascurate: Uomini e donne, per motivi diversi, potrebbero non denunciare le aggressioni per vergogna sociale.
 \item Argomentazione femminile: Nella violenza genitoriale i padri sono i principali responsabili della violenza sui figli.
-Variabili trascurate: quasi il 40,0\% delle vittime è maltrattato da una madre che agisce da sola contro il 21,5\% che viene maltrattato da un padre che agisce da perché solo\endnote{\raggedright\url{https://www.acf.hhs.gov/sites/default/files/documents/cb/cm2018.pdf}}. Gli omicidi di bambini sotto l'anno di età sono compiute da donne nell'89,4\% dei casi\endnote{realizzata dall'Istituto di ricerche economico-sociali \raggedright\url{https://www.linkiesta.it/2019/09/maltrattamenti-minori-prevenzione-costi/}}).
-Variabili trascurate: Le madri passano statisticamente più tempo con i figli, di conseguenza c'è una maggiore opportunità di conflitto, non si distingue tra diversi tipi di maltrattamento ecc…
-Variabili trascurate: questo dato non distingue tra tipo di maltrattamento (psicologico, trascuratezza, abuso fisico grave).
+\\Variabili trascurate: quasi il 40,0\% delle vittime è maltrattato da una madre che agisce da sola contro il 21,5\% che viene maltrattato da un padre che agisce da perché solo\endnote{\raggedright\url{https://www.acf.hhs.gov/sites/default/files/documents/cb/cm2018.pdf}}. Gli omicidi di bambini sotto l'anno di età sono compiute da donne nell'89,4\% dei casi\endnote{realizzata dall'Istituto di ricerche economico-sociali \raggedright\url{https://www.linkiesta.it/2019/09/maltrattamenti-minori-prevenzione-costi/}}).
+\\Variabili trascurate: Le madri passano statisticamente più tempo con i figli, di conseguenza c'è una maggiore opportunità di conflitto e, questo dato, non distingue tra i diversi tipi e gravità di maltrattamento ecc…
 \item Argomentazione maschile: In Italia gli stupri sono molto inferiori rispetto al resto d'Europa e del mondo\endnote{\raggedright\url{https://en.wikipedia.org/wiki/Rape_statistics}} \endnote{\raggedright\url{https://www.morewithdata.net/blog/20250108-Femicide-and-sexual-violence-in-Europe.html}} Regno unito con 117.3 vittime per 100.000 donne, Svezia 84.4, Francia 62.7, Nuova Zelanda 58.6, Islanda 45.4, Stati Uniti 41.4, Italia 12.41.
-Variabili trascurate: Una donna potrebbe avere stigmi sociali che le impediscono di denunciare.
+\\Variabili trascurate: Una donna Italiana potrebbe avere stigmi sociali che le impediscono di denunciare rispetto ad altri paesi.
 \item Argomentazione femminile: I femminicidi sono in aumento.
-Variabili trascurate: Obiezioni su come vengono conteggiati:
-\begin{itemize}
-\item Donne trans
-\item Suicidi: difficile provare il nesso con la violenza patriarcale
-\item Movente: definizione di femminicidio.
-\item Donne uccise da altre donne: difficile provare se il movente è legato a dinamiche patriarcali
-\end{itemize}
-Variabili trascurate: I dati che seguono non hanno lo scopo di minimizzare un fenomeno così grave come il femminicidio, ma di mostrare come i numeri, se isolati dal contesto, possano dare un’immagine incompleta o fuorviante. L’obiettivo è promuovere un’analisi più rigorosa, non una minimizzazione del problema.
-In Italia nel 2020 ci sono stati 91 femminicidi, fenomeno che ha impattato per lo 0,00031\% (~29.5 milioni donne in Italia) nel 2022 sono stati 126, ovvero lo 0,00043\%. Quindi l'aumento dei femminicidi è stato del 38,46\% che sembra tantissimo, ma l'aumento del fenomeno nella sua totalità è del 0,00012\%. Su numeri così piccoli è difficile parlare di una tendenza o di cultura, infatti nel 2024 i femminicidi sono scesi a 113. Il fenomeno, seppur numericamente limitato, ha un forte impatto simbolico e richiede analisi approfondite: inoltre i dati non spiegano la sofferenza, ma servono a costruire risposte più efficaci.
-Variabili trascurate: Il dato dei femminicidi nasconde inoltre un altro problema, quello degli omicidi che si potevano prevenire in quanto preceduti da denunce ignorate. I femminicidi sono tragedie che scuotono l’opinione pubblica e meritano attenzione, ma è importante affrontarli con rigore. I dati disponibili osservano che si tratta di eventi gravi, ma numericamente limitati, spesso legati a dinamiche relazionali personali, non sempre prevenibili tramite interventi culturali generalizzati.
-Non si può negare l’esistenza di relazioni tossiche, disfunzionali o violente, ma attribuire queste tragedie a un’intera cultura maschile, che condanna questi comportamenti, rischia di essere fuorviante. Allo stesso tempo, la società ha il dovere di continuare a impegnarsi nella prevenzione e nel supporto alle vittime, affinché nessuna persona debba vivere nella paura.
-\item Argomentazione maschile: In Italia il divario salariale tra uomini e donne in Italia è tra i più bassi in Europa \endnote{\raggedright\url{https://ourworldindata.org/economic-inequality-by-gender}}.
-Variabili trascurate: In Italia però la disoccupazione femminile è tra le più alte \endnote{\raggedright\url{https://en.wikipedia.org/wiki/Women\_in\_the\_workforce\#/media/File:Unemployment\_rate,\_women,\_OWID.svg}}.
-Variabili trascurate: La disoccupazione dipende anche dalla prevalenza di donne in facoltà umanistiche di cui c'è meno richiesta
-Variabili trascurate: La poca rappresentanza di donne nelle facoltà STEM (Scienza, Tecnologia, Ingegneria e Matematica) dipende da fattori culturali, a loro volta influenzati da altre variabili.
-Parlare delle difficoltà che alcune donne incontrano nel lavoro non significa accusare gli uomini, ma riconoscere che ci sono ancora ostacoli, che limitano le scelte di tutti. Non sempre si tratta di colpa o di intenzione: fattori culturali, familiari o storici possono pesare sulle decisioni individuali. Affrontarli non è una battaglia tra sessi, ma un modo per permettere a ciascuno di esprimere davvero il proprio potenziale.
-Il gender pay gap, è stato a lungo uno dei temi centrali delle battaglie per la parità. E con buone ragioni: in passato e ancora oggi, in molte situazioni le donne si trovano penalizzate da stereotipi, mansioni poco valorizzate o discriminazioni dirette e indirette.
-\item Argomentazione femminile: Le donne ottengono generalmente voti più alti degli uomini durante il percorso scolastico e universitario. 
-Variabili trascurate: alcuni studi\endnote{\raggedright\url{https://blueprintlabs.mit.edu/research/boys-lag-behind-how-teachers-gender-biases-affect-student-achievement/}} osservano che quando chi valuta non conosce il sesso dello studente, gli uomini tendono a ottenere punteggi più alti. Questo suggerisce che potrebbero esistere bias di genere impliciti nel processo valutativo.
-Variabili trascurate: Le donne sono più vittime della sindrome dell’impostore, la minore autostima nelle materie STEM (che vedremo tra poco), ecc…
-Riconoscere queste dinamiche non significa sminuire i successi delle ragazze, ma piuttosto promuovere un sistema educativo che valorizzi pienamente le diverse potenzialità di tutti.
+\\Variabili trascurate: Oltre alla difficoltà di trovare una definizione riconosciuta di femminicidio, in questi conteggi, spesso troviamo: trans, donne uccise da altre donne, suicidi e altri elementi di cui è difficile provare un nesso patriarcale.
+\\Variabili trascurate: I dati che seguono non hanno lo scopo di minimizzare un fenomeno così grave come il femminicidio, ma di mostrare come i numeri, se isolati dal contesto, possano dare un’immagine incompleta o fuorviante.
+In Italia nel 2020 ci sono stati 91 femminicidi, fenomeno che ha impattato per lo 0,00031\% (~29.5 milioni donne in Italia) nel 2022 sono stati 126, ovvero lo 0,00043\%. Quindi l'aumento dei femminicidi è stato del 38,46\% che sembra tantissimo, ma l'aumento del fenomeno nella sua totalità è del 0,00012\%. Con questi numeri risulta difficile parlare di una tendenza o di cultura, infatti nel 2024 i femminicidi sono scesi a 113.
+\\Variabili trascurate: Il dato dei femminicidi è spesso legato a dinamiche relazionali personali, non sempre prevenibili tramite interventi culturali generalizzati. Al contempo non sono rari i casi di omicidi che si potevano prevenire grazie a denunce che però sono state ignorate. 
+\item Argomentazione maschile: In Italia il divario salariale tra uomini e donne è tra i più bassi in Europa\endnote{\raggedright\url{https://ourworldindata.org/economic-inequality-by-gender}}.
+\\Variabili trascurate: In Italia la disoccupazione femminile è tra le più alte in Europa\endnote{\raggedright\url{https://en.wikipedia.org/wiki/Women\_in\_the\_workforce\#/media/File:Unemployment\_rate,\_women,\_OWID.svg}}.
+\\Variabili trascurate: La disoccupazione dipende anche dalla prevalenza di donne in facoltà umanistiche di cui c'è meno richiesta.
+\\Variabili trascurate: La poca rappresentanza di donne nelle facoltà STEM (Scienza, Tecnologia, Ingegneria e Matematica) può dipendere anche da fattori culturali. Uno studio intitolato “draw scientists” chiedeva a dei bambini di disegnare uno scienziato. Il 99.4\% dei bambini e delle bambine disegnarono uno maschio. Nel 2018 la percentuale scese al 72\%, anche se risulta ancora piuttosto alta\endnote{\raggedright\url{https://srcd.onlinelibrary.wiley.com/doi/full/10.1111/cdev.13039}}.
+\\Variabili trascurate: Gli uomini si sentono meno liberi di scegliere materie umanistiche, che potrebbero arricchirli, per condizionamenti sociali che richiedono di prendersi cura della famiglia e, in alcuni contesti, si sente in dovere di guadagnare più della donna.
+\item Argomentazione femminile: Le donne ottengono generalmente voti più alti degli uomini a scuola. 
+\\Variabili trascurate: alcuni studi\endnote{\raggedright\url{https://blueprintlabs.mit.edu/research/boys-lag-behind-how-teachers-gender-biases-affect-student-achievement/}} osservano che, quando chi valuta non conosce il sesso dello studente, gli uomini tendono a ottenere punteggi più alti.
+\\Variabili trascurate: Le donne sono più vittime della sindrome dell’impostore e minore autostima nelle materie STEM.
 \item Argomentazione maschile: Le donne guadagnano il 20\% in meno rispetto agli uomini.
-Variabili trascurate: Numerosi calcoli sulla differenza di salario tra i generi vengono fatti semplicemente sommando gli stipendi di uomini e donne in percentuale, senza considerare: tipologia di lavoro (lavori STEM più remunerative e con prevalenza maschile), contratti (part time più diffuso tra le donne), Differenze regionali nel costo della vita ecc… con queste considerazioni la distanza si riduce ad un 5\%\endnote{\raggedright\url{https://www.pewresearch.org/short-reads/2025/03/04/gender-pay-gap-in-us-has-narrowed-slightly-over-2-decades}} \endnote{\raggedright\url{https://www.epi.org/publication/what-is-the-gender-pay-gap-and-is-it-real/}}. In altri indici, la differenza sembra arrivare anche a 0\endnote{An economist explains why women are paid less
-\raggedright\url{https://www.weforum.org/agenda/2019/03/an-economist-explains-why-women-get-paid-less/}}.
-Variabili trascurate: perché le donne scelgono più spesso il part-time? È davvero una scelta libera o è dovuta alla mancanza di servizi per l'infanzia e alla divisione diseguale del lavoro domestico?
-Variabili trascurate: Le donne forse non scelgono materie STEM per condizionamenti sociali. Uno studio intitolato “draw scientists” chiedeva a dei bambini di disegnare uno scienziato. Il 99.4\% dei bambini e delle bambine disegnarono uno maschio, percentuale salita al 28\% nel 2018\endnote{\raggedright\url{https://srcd.onlinelibrary.wiley.com/doi/full/10.1111/cdev.13039}}.
-Variabili trascurate: O forse gli uomini si sentono meno liberi di scegliere materie umanistiche che li arricchirebbero maggiormente come persone, sempre per lo stesso motivo, i condizionamenti sociali che richiedono all'uomo di prendersi cura della famiglia o che si sente in dovere di guadagnare più della donna.
-Variabili trascurate: Secondo uno studio\endnote{\raggedright\url{https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3048711}}, anche quando non si conosce il sesso dei partecipanti (nei lavori da remoto), le donne guadagnano comunque meno. Questo è un dato, ma non una sentenza. Potrebbe suggerire che non esiste una discriminazione a priori, ma, nemmeno che le donne siano meno competenti. Le donne infatti, data la più frequente cura domestica, in remoto risultato più occupate e distratte, così da accettare lavori più semplici e meno retribuiti. Per questo paesi con politiche sociali di congedo parentale, che apparentemente avvantaggiano gli uomini, in realtà portano ad una disoccupazione femminile più bassa. Grazie a questa possibilità una donna orientata alla carriera, con un compagno più orientato alla famiglia, possono avere una vita più incline ai propri desideri. 
+\\Variabili trascurate: Numerosi calcoli sulla differenza di salario tra i generi vengono fatti sommando gli stipendi di uomini e donne in percentuale, senza considerare tipologia di lavoro o se è part-time o full-time. Con questi pesi, la distanza si riduce ad un 5\%\endnote{\raggedright\url{https://www.pewresearch.org/short-reads/2025/03/04/gender-pay-gap-in-us-has-narrowed-slightly-over-2-decades}} \endnote{\raggedright\url{https://www.epi.org/publication/what-is-the-gender-pay-gap-and-is-it-real/}}. In altri indici, la differenza sembra arrivare anche a 0\endnote{An economist explains why women are paid less \raggedright\url{https://www.weforum.org/agenda/2019/03/an-economist-explains-why-women-get-paid-less/}}.
+\\Variabili trascurate: Le donne spesso non scelgono il part-time, ma è una condizione imposta dalla mancanza di servizi per l'infanzia e alla divisione diseguale del lavoro domestico.
+\\Variabili trascurate: Secondo uno studio\endnote{\raggedright\url{https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3048711}}, anche quando non si conosce il sesso dei partecipanti (nei lavori da remoto), le donne guadagnano comunque meno. Questo dice solo che le donne guadagnano meno, non significa che siano meno competenti. Le donne infatti, impegnate nella cura domestica, risultato più occupate e distratte, così devono accettare lavori più semplici e meno retribuiti. Per questo, paesi con politiche sociali di congedo parentale, che apparentemente avvantaggiano gli uomini, in realtà portano ad una disoccupazione femminile più bassa. Grazie a questa possibilità una donna orientata alla carriera, con un compagno più orientato alla famiglia, possono avere una vita più incline ai propri desideri. 
 \end{itemize}
 
-Quindi cercare di comprendere fenomeni complessi è una perdita di tempo, perché tanto non si riusciranno mai a contemplare tutte le variabili e le cause delle cause? No, è importante cercare di tentare di dare ordine al mondo per cercare di prevederlo, al meglio possibile trovato fino ad ora e fornire le migliori soluzioni, seppur non definitive o perfette.
-Continuando a fornire nuove spiegazioni e trovando nuovi errori, pian piano, con cambiamenti purtroppo forse troppo lenti, si riuscirà ad avvicinarsi sempre di più a qualcosa che assomigli alla verità.
-Questi esempi mi servono sono per dire che è importante continuare a informarsi, ma senza avere la certezza di aver trovato la verità definitiva, evitando di schierarsi in qualche gruppo. Quando ci schieriamo e ne facciamo parte della nostra identità, possiamo rischiare di arrivare a difendere quelle idee come noi stessi, portandoci ad assumere comportamenti esagerati e una rigidità mentale.
+Cercare di comprendere fenomeni complessi non è una perdita di tempo, ma potremmo non arrivare ad una risposta definitiva.
+Evitiamo di schierarci in qualche gruppo o identificarci in qualcosa, perchè potremmo assumere comportamenti esagerati e una rigidità mentale, rendendo difficile cambiare idea.
 \end{mdframed}
 
 \clearpage\section{Felicità}
